// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display no progress if recieved progress value is 0 1`] = `
<div
  className="progress"
>
  <div
    className="progress__percent"
    style={
      Object {
        "width": "0%",
      }
    }
  />
</div>
`;

exports[`should display the recieved progress value 1`] = `
<div
  className="progress"
>
  <div
    className="progress__percent"
    style={
      Object {
        "width": "50%",
      }
    }
  />
</div>
`;
